- Fixed debug timings from overflowing inside Rock theme.

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -1595,6 +1595,7 @@ body.navbar-side-open {
 // Move the debug timing table to the right so it's not hidden by the admin theme's left nav
 .debug-timings {
   margin-left: 115px;
+  width: ~"calc(100% - 140px)" !important;
 }
 
 /* #endregion */
